[package]
name = "paypal-api-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
hyper = "0.14.27"
reqwest = "0.11.22"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
